<resources>
    <!--命名设置-->
    <string name="app_name">东湖景区智慧旅游</string>
    <string name="admin_login">管理员登录</string>
    <string name="hi">Hi!</string>
    <string name="welcome">欢迎使用东湖景区智慧旅游</string>
    <string name="username_in">请输入用户名</string>
    <string name="email_in">请输入邮箱</string>
    <string name="password_in">请输入密码</string>
    <string name="re_password_in">请再次输入密码</string>
    <string name="old_password_in">请输入旧密码</string>
    <string name="new_password_in">请输入新密码</string>
    <string name="login">登录账号</string>
    <string name="register_word">立即注册</string>
    <string name="register">注册账号</string>
    <string name="forget_word">忘记密码？</string>
    <string name="edit_password">修改密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="admin_word">登录管理员系统</string>
    <string name="back">返回</string>
    <string name="tab_home">首页</string>
    <string name="tab_guide">攻略</string>
    <string name="tab_surroundings">周边</string>
    <string name="tab_mine">我的</string>
    <string name="nav_home">主页</string>
    <string name="admin_home_first">您好！管理员</string>
    <string name="admin_home_second">欢迎使用东湖景区智慧旅游管理员系统。</string>
    <string name="admin_home_info">信息概述</string>
    <string name="admin_home_docent">景区讲解员人数：</string>
    <string name="admin_home_complaint">投诉待处理数量：</string>
    <string name="admin_home_coach">景区游览车数量：</string>
    <string name="admin_home_admin">管理员管理</string>
    <string name="admin_home_bt">管理员设置</string>
    <string name="home_welcome">欢迎进入东湖智慧旅游管理员系统</string>
    <string name="nav_analysis">客情分析</string>
    <string name="nav_emergency">应急管理</string>
    <string name="nav_docent">讲解员管理</string>
    <string name="nav_complaint">投诉管理</string>
    <string name="nav_coach">游览车管理</string>
    <string name="nav_bottom">账号设置与管理</string>
    <string name="nav_password">修改密码</string>
    <string name="nav_setting">账号设置</string>
    <string name="nav_back">退出系统</string>
    <string name="user_setting">账号设置</string>
    <string name="mine_guide">我的攻略</string>
    <string name="mine_purchase">我的购票</string>
    <string name="mine_complain">景区投诉</string>
    <string name="mine_alarm">一键报警</string>
    <string name="mine_logout">账号注销</string>
    <string name="mine_back">退出登录</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_email">邮箱</string>
    <string name="info_title">个人信息</string>
    <string name="info_headshot">点击更换头像</string>
    <string name="info_nickname">昵称</string>
    <string name="info_gender">性别</string>
    <string name="info_introduction">简介</string>
    <string name="info_birthday">生日</string>
    <string name="info_phone">电话</string>
    <string name="info_email">邮箱</string>
    <string name="mine_guide_empty">您还未发布任何攻略~</string>
    <string name="mine_purchase_empty">暂无购票信息~</string>
    <string name="complain_type_title">投诉类型</string>
    <string name="complain_type_hint">请选择投诉问题类型</string>
    <string name="complain_question_title">问题描述</string>
    <string name="complain_question_hint">请描述您在景区所遇到的问题</string>
    <string name="complain_question_num">/200</string>
    <string name="complain_question_sum">0</string>
    <string name="complain_contact_title">联系方式（电话）</string>
    <string name="complain_contact_hint">请输入联系方式</string>
    <string name="complain_submit">提交</string>
    <string name="guide_info">攻略详情</string>
    <string name="guide_add">攻略发布</string>
    <string name="guide_edit">攻略修改</string>
    <string name="guide_search_hint">请输入查找内容</string>
    <string name="guide_empty">未找到相关攻略</string>
    <string name="add_title">填写标题</string>
    <string name="add_num">30</string>
    <string name="add_content">添加正文</string>
    <string name="add_publish">发布</string>
    <string name="edit_title">修改标题</string>
    <string name="edit_content">修改内容</string>
    <string name="edit_edit">修改</string>
    <string name="complaint_username">投诉用户：</string>
    <string name="complaint_type">投诉类型：</string>
    <string name="complaint_content">投诉内容：</string>
    <string name="docent_info">讲解员信息</string>
    <string name="docent_info_photo">点击上传新照片</string>
    <string name="docent_add">讲解员登记</string>
    <string name="docent_addBt">登记</string>
    <string name="docent_add_photo">个人照片（上传照片）</string>
    <string name="docent_add_name">姓名</string>
    <string name="docent_add_name_hint">输入讲解员姓名</string>
    <string name="docent_add_gender">性别</string>
    <string name="docent_add_gender_hint">选择讲解员性别</string>
    <string name="docent_add_age">年龄</string>
    <string name="docent_add_age_hint">输入讲解员年龄</string>
    <string name="docent_add_phone">联系电话</string>
    <string name="docent_add_phone_hint">输入讲解员联系电话</string>
    <string name="docent_item_gender">性别：</string>
    <string name="docent_item_age">年龄：</string>
    <string name="docent_item_phone">联系电话：</string>
    <string name="surroundings_search_hint">在附近搜索</string>
    <string name="surroundings_search_bt">搜索</string>
    <string name="surroundings_search_text">当前位置周边</string>
    <string name="user_info">用户信息</string>
    <string name="user_location">报警位置</string>
    <string name="emergency_user">用户：</string>
    <string name="emergency_infoBt">查看报警用户信息</string>
    <string name="emergency_locationBt">查看报警位置</string>
    <string name="coach_id">游览车编号：</string>
    <string name="coach_license">车牌号：</string>
    <string name="coach_capacity">载客量：</string>
    <string name="coach_editBt">修改游览车信息</string>
    <string name="coach_locationBt">游览车当前位置</string>
    <string name="coach_add">游览车登记</string>
    <string name="coach_add_license">车牌号</string>
    <string name="coach_add_license_hint">输入游览车车牌号</string>
    <string name="coach_add_capacity">载客量</string>
    <string name="coach_add_capacity_hint">输入游览车载客量</string>
    <string name="route_way">出行方式：</string>
    <string name="route_spend">距离和时间</string>
    <string name="route_info">详情</string>
    <string name="route_line">出发</string>
    <string name="sight_info">景点信息</string>
    <string name="sight_info_comment">用户评论</string>
    <string name="sight_info_empty">当前景点暂无评论~</string>
    <string name="sight_info_commentBt">评论</string>
    <string name="sight_info_bookBt">在线订票</string>
    <string name="sight_info_navigateBt">景点导航</string>
    <string name="sight_comment">用户评论</string>
    <string name="sight_comment_text">评论内容</string>
    <string name="sight_comment_text_hint">请编写您的评论内容</string>
    <string name="sight_comment_submitBt">发布</string>
    <string name="sight_purchase">确认订单</string>
    <string name="sight_purchase_infoTitle">景点票信息</string>
    <string name="sight_purchase_numTitle">购买数量</string>
    <string name="sight_purchase_ticket">景点票</string>
    <string name="sight_purchase_quantity">1</string>
    <string name="sight_purchase_price">单价：</string>
    <string name="sight_purchase_date">购买日期：</string>
    <string name="sight_purchase_total">总价：</string>
    <string name="sight_purchase_num">数量：</string>
    <string name="sight_purchase_moneyTv">合计：</string>
    <string name="sight_purchase_payBt">立即付款</string>
    <string name="visitors_day">日</string>
    <string name="visitors_month">月</string>
    <string name="visitors_year">年</string>
    <string name="visitors_title">访客情况</string>
    <string name="visitors_average">近7日平均访客量：</string>
    <string name="visitors_total">近7日合计访客量：</string>
    <string name="complaint_title">投诉情况</string>
    <string name="complaint_total">总投诉数：</string>
    <string name="complaint_rate">已处理投诉占比：</string>
</resources>