<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--设置背景图片-->
    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_three" />
    <!--返回我的界面-->
    <LinearLayout
        android:id="@+id/top_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/backBt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="start|center"
            android:paddingBottom="5dp"
            android:text="@string/back"
            android:textColor="@color/dark_red"
            android:textSize="16sp" />
    </LinearLayout>
    <!--旧密码输入框-->
    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_frame"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/old_password_in"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="true" />
    <!--旧密码输入框-->
    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/new_password_in"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="true" />
    <!--旧密码输入框-->
    <EditText
        android:id="@+id/renew_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/re_password_in"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="true" />
    <!--修改密码按钮-->
    <Button
        android:id="@+id/editPasswordBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/renew_password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radius_border_purple"
        android:text="@string/edit_password"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>