<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
    <!--设置背景图片-->
    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_one"/>
    <!--引出管理员登录界面-->
    <LinearLayout
        android:id="@+id/admin_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/adminLoginBt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right|center"
            android:paddingBottom="5dp"
            android:text="@string/admin_login"
            android:textColor="@color/dark_red"
            android:textSize="16sp" />
    </LinearLayout>
    <!--显示欢迎语-->
    <RelativeLayout
        android:id="@+id/welcome_frame"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/admin_frame">
        <TextView
            android:id="@+id/first_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:text="@string/hi"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/second_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_word"
            android:text="@string/welcome"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"/>
    </RelativeLayout>
    <!--登录主体界面-->
    <RelativeLayout
        android:id="@+id/login_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/welcome_frame"
        android:background="@drawable/radius_border_white">
        <!--用户名输入框-->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/username_in"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />
        <!--密码输入框-->
        <LinearLayout
            android:id="@+id/passwordBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--编辑框-->
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/password_in"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />
                <!--密码显示或隐藏图标-->
                <ImageView
                    android:id="@+id/hide_or_display"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/password_hide"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp" />
            </RelativeLayout>
        </LinearLayout>
        <!--登录按钮-->
        <Button
            android:id="@+id/loginBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordBox"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/radius_border_purple"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <LinearLayout
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginBt"
            android:orientation="horizontal"
            android:layout_marginRight="10dp">
            <!--跳转到注册-->
            <TextView
                android:id="@+id/registerBt"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/register_word"
                android:textColor="@color/dark_red"
                android:textSize="18sp" />
            <!--设置一个空布局，使布局适配多数设备-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
            <!--跳转到忘记密码-->
            <TextView
                android:id="@+id/forgetBt"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/forget_word"
                android:textColor="@color/dark_red"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>